# ucsd-cse130-fa22-programming-languages-haskell-assignments

./: .gitignore  README.md
01-haskell/: Makefile  README.md  hw1-haskell.cabal
01-haskell/src/: Hw1.hs
02-random-art/: Makefile  README.md  hw2-random-art.cabal
02-random-art/src/: RandomArt.hs  TailRecursion.hs
02-random-art/tests/: Test.hs
03-fold-ChengaFEI-master/: Makefile  README.md  hw3-fold.cabal  stack.yaml
03-fold-ChengaFEI-master/src/: Hw3.hs
04-nano-ChengaFEI-master/: README.md
04-nano-ChengaFEI-master/src/Language/Nano/: Eval.hs  Lexer.x  Parser.y  Types.hs
04-nano-ChengaFEI-master/tests/: Test.hs
05-classes-ChengaFEI-master/: Makefile  README.md  hw5-classes.cabal  stack.yaml
05-classes-ChengaFEI-master/src/: Main.hs
05-classes-ChengaFEI-master/src/Data/: BST.hs
05-classes-ChengaFEI-master/src/Language/Nano/: Eval.hs  Parser.y  Repl.hs  Types.hs
05-classes-ChengaFEI-master/tests/: Common.hs  Test.hs
05-classes-ChengaFEI-master/tests/input/: tFold.hs
final-ChengaFEI-master/: Makefile  README.md  fa22-final.cabal  stack.yaml
final-ChengaFEI-master/src/: BHeap.hs
final-ChengaFEI-master/tests/: Common.hs  Test.hs
